[package]
name = "rovs-ext"
description = "High-level OVS automation extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rovs-types = { workspace = true }
rovs-transport = { workspace = true }
rovs-ovsdb = { workspace = true }
rovs-openflow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
